--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -5,8 +5,9 @@
     <packaging>jar</packaging>
     <!--    Either use the snapshot version of manually enter the current build number. 
     The build number is only required when depending on the output in other projects or building to the server.-->
-    <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>
-    <!--<version>2.5.1039-stable</version>-->
+
+<version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>
+<!--    <version>2.6.1076-testing</version> -->
     <name>Arbil</name>   
     
     <parent>
@@ -185,7 +186,7 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>typechecker</artifactId>
-            <version>1.7.6</version>
+            <version>1.7.7</version>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
