added changes from SVN <https://svn.mpi.nl/LAT/Arbil/branches/arbil.2.6.x> 43640:44557

--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -46,7 +46,7 @@ application.minimalJavaVersion=1.5.0
 ####################################
 # Distribution
 ####################################
-application.debian.dependends=sun-java5-jre | sun-java6-jre | openjdk-7-jre, ffmpeg
+application.debian.dependends=sun-java5-jre | sun-java6-jre | openjdk-7-jre | openjdk-8-jre, ffmpeg | libav-tools
 # graphicsmagick-imagemagick-compat see ticket #3623 
 application.debian.section=science
 application.debian.conflicts=
@@ -75,5 +75,6 @@ application.releaseNotesLocation=release_notes.txt
 # location of icons directory, relative to the application baseDir
 application.iconsDir=src/main/resources/nl/mpi/arbil/resources/icons/
 # location of mpi.keystore file, relative to the application baseDir
-mpi.keystorelocation=../../../../cert/mpi.keystore
+mpi.keystorelocation=installer/cert/mpi.keystore
 mpi.keyname=lat-mpg
+
