--- a/arbil/application.properties
+++ b/arbil/application.properties
@@ -28,8 +28,8 @@ application.shortDescription=Arbil is an application for arranging research mate
 application.longDescription=Arbil is an application for arranging research material and associated metadata into a format appropriate for archiving.  Arbil is designed so that it can be used off line in remote locations. The data can be entered at any stage in part or as a whole. When an internet connection is available the work can then be transferred to the main archive via Lamus.\
                             \
                             http://tla.mpi.nl/tools/tla-tools/arbil/
-application.maintainer.name=Peter Withers
-application.maintainer.email=Peter.Withers@mpi.nl
+application.maintainer.name=Twan Goosen
+application.maintainer.email=twan.goosen@mpi.nl
 
 ####################################
 # Requirements
