--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -8,7 +8,7 @@
 
 <!--
 <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
-    <version>2.6.1074-testing</version>
+    <version>2.6.1075-stable</version>
     <name>Arbil</name>   
     
     <parent>
@@ -260,17 +260,17 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>arbil-help</artifactId>
-            <version>2.6.34-testing</version>
+            <version>2.6.35-stable</version>
         </dependency>
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>arbil-commons</artifactId>
-            <version>2.6.41-testing</version>
+            <version>2.6.42-stable</version>
         </dependency>
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>arbil-localisation</artifactId>
-            <version>2.6.155-testing</version>
+            <version>2.6.156-stable</version>
         </dependency>
 
         <!-- 
