--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -7,8 +7,8 @@
     The build number is only required when depending on the output in other projects or building to the server.-->
 
 
-<version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>
-    <!--<version>2.6.1080-stable</version>-->
+<!--<version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
+    <version>2.6.1085-stable</version>
     <name>Arbil</name>   
     
     <parent>
