--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -8,7 +8,7 @@
 
 
 <!--<version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
-    <version>2.6.1085-stable</version>
+    <version>2.6.1086-pretesting</version>
     <name>Arbil</name>   
     
     <parent>
