--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <properties>
         <arbil.majorVersion>2</arbil.majorVersion>
         <arbil.minorVersion>6</arbil.minorVersion>
-        <arbil.branch>stable</arbil.branch>
+        <arbil.branch>pretesting</arbil.branch>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>1.7.10</slf4j.version>
         <!-- Year to show in copyright messages. Used in the 'About Arbil' dialog (via version.properties) and by maven-license-plugin (see below) -->
