--- a/arbil-help/pom.xml
+++ b/arbil-help/pom.xml
@@ -7,7 +7,7 @@
     The build number is only required when depending on the output in other projects or building to the server.-->
 <!--
     <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
-    <version>2.6.37-pretesting</version>
+    <version>2.6.38-testing</version>
     <name>Arbil Help</name>
     
     <parent>
