--- a/arbil-localisation/pom.xml
+++ b/arbil-localisation/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>arbil-localisation</artifactId>
 <!--
     <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
-    <version>2.6.158-testing</version>
+    <version>2.6.159-stable</version>
     
     <name>Arbil Localisation ${arbil.majorVersion}.${arbil.minorVersion}</name>
     <url>http://maven.apache.org</url>
