--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -8,7 +8,7 @@
 
 
 <!--<version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
-    <version>2.6.1088-testing</version>
+    <version>2.6.1089-stable</version>
     <name>Arbil</name>   
     
     <parent>
@@ -187,7 +187,7 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>typechecker</artifactId>
-            <version>1.8.3</version>
+            <version>1.8.4</version>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
