--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -8,7 +8,7 @@
 
 
 <!--<version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
-    <version>2.6.1089-stable</version>
+    <version>2.6.1089-pretesting</version>
     <name>Arbil</name>   
     
     <parent>
@@ -224,7 +224,7 @@
         <dependency>
             <groupId>net.sf.saxon</groupId>
             <artifactId>Saxon-HE</artifactId>
-            <version>9.5.1-8</version>
+            <version>9.7.0-6</version>
         </dependency>
         <dependency>
             <groupId>xerces</groupId>
@@ -302,7 +302,7 @@
         <dependency>
             <groupId>nl.mpi.translation</groupId>
             <artifactId>metadata-translator</artifactId>
-            <version>1.6.0</version>
+            <version>1.6.1</version>
         </dependency>
     </dependencies>    
 </project>
