--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -8,7 +8,7 @@
 
 
 <!--<version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
-    <version>2.6.1091-pretesting</version>
+    <version>2.6.1092-pretesting</version>
     <name>Arbil</name>   
     
     <parent>
@@ -302,7 +302,7 @@
         <dependency>
             <groupId>nl.mpi.translation</groupId>
             <artifactId>metadata-translator</artifactId>
-            <version>1.6.1</version>
+            <version>1.6-SNAPSHOT</version>
         </dependency>
     </dependencies>    
 </project>
