--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -8,7 +8,7 @@
 
 
 <!--<version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
-    <version>2.6.1096-pretesting</version>
+    <version>2.6.1097-pretesting</version>
     <name>Arbil</name>   
     
     <parent>
@@ -275,7 +275,7 @@
         <dependency>
             <groupId>nl.mpi.translation</groupId>
             <artifactId>metadata-translator</artifactId>
-            <version>1.6-SNAPSHOT</version>
+            <version>1.6.2</version>
         </dependency>
 
         <!-- 
