--- a/arbil-localisation/pom.xml
+++ b/arbil-localisation/pom.xml
@@ -10,8 +10,8 @@
     <groupId>nl.mpi</groupId>
     <artifactId>arbil-localisation</artifactId>
 
-    <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>
-    <!--<version>2.6.159-stable</version>-->
+<!--    <version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version> -->
+    <version>2.6.163-pretesting</version>
     
     <name>Arbil Localisation ${arbil.majorVersion}.${arbil.minorVersion}</name>
     <url>http://maven.apache.org</url>
