--- a/arbil/pom.xml
+++ b/arbil/pom.xml
@@ -8,7 +8,7 @@
     The build number is only required when depending on the output in other projects or building to the server.-->
 
 <!--<version>${arbil.majorVersion}.${arbil.minorVersion}-${arbil.branch}-SNAPSHOT</version>-->
-    <version>2.6.1105-pretesting</version>
+    <version>2.6.1106-testing</version>
     <name>Arbil</name>   
     
     <parent>
@@ -270,7 +270,7 @@
         <dependency>
             <groupId>nl.mpi</groupId>
             <artifactId>arbil-localisation</artifactId>
-            <version>2.6.163-pretesting</version>
+            <version>2.6.164-testing</version>
         </dependency>
         <dependency>
             <groupId>nl.mpi.translation</groupId>
